--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -82,7 +82,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido" ref="{% url 'calidad' %}" class="nav-link">
                                 <i class="nav-icon fas fa-medal"></i>Calidad
                             </a>
                         </li>
@@ -102,7 +102,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido"ref="{% url 'ti' %}" class="nav-link">
                                 <i class="nav-icon fas fa-microchip"></i>T.I
                             </a>
                         </li>
