--- a/login/templates/gestionalimentobal.html
+++ b/login/templates/gestionalimentobal.html
@@ -11,7 +11,7 @@
 
 
   <!-- SELECT2 EXAMPLE -->
-  <div class="card card-default collapsed-box">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso De Planta Alimentos Balanceado</h3>
 
