--- a/login/templates/gestionhumana.html
+++ b/login/templates/gestionhumana.html
@@ -11,7 +11,7 @@
 
 
   <!-- SELECT2 EXAMPLE -->
-  <div class="card card-default collapsed-box">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso De Nomina</h3>
 
@@ -39,7 +39,7 @@
   </div>
 
   <!------------------------------------------------------- carga 2do excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de Promociones </h3>
 
@@ -66,7 +66,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 3er excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de Proceso De Seleccion </h3>
 
@@ -93,7 +93,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 4to excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de Retencion </h3>
 
@@ -120,7 +120,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 5to excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de Rotacion </h3>
 
@@ -147,7 +147,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 6to excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de SST DIAGNOSTICOS INDICADORES </h3>
 
@@ -174,7 +174,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 7mo excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de SST INDICADORES </h3>
 
@@ -201,7 +201,7 @@
     </div>
   </div>
   <!------------------------------------------------------- carga 8vo excel  -------------------------->
-  <div class="card card-default collapsed">
+  <div class="card card-default  collapsed collapsed-card">
     <div class="card-header bg-dark" data-card-widget="collapse">
       <h3 class="card-title">Ingreso de SST SEVERIDAD Y FRECUENCIA </h3>
 
