--- a/login/templates/_main_header.html
+++ b/login/templates/_main_header.html
@@ -13,10 +13,11 @@
         {% if request.user.is_authenticated%}
         {% if request.user.is_staff%}
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin" class="nav-link">Admin</a>
+            <a href="/admin/" class="nav-link1">Admin</a>
         </li>
         {% endif %}
         {% endif %}
+       
     </ul>
 
 
