cambios en carga de archivos

--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -92,7 +92,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" class="nav-link">
+                            <a id="cargarContenido" ref="{% url 'adminfinan' %}" class="nav-link">
                                 <i class="nav-icon fas fa-coins"></i>G- Admin y Financiera
                             </a>
                         </li>
