--- a/login/templates/_main_sidebar.html
+++ b/login/templates/_main_sidebar.html
@@ -29,6 +29,7 @@
 
         <!-- sidebar menu: : style can be found in sidebar.less -->
         {% block nav_links_ul %}
+        <div class="sidebar-menu">
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 {% block nav_links_outer %}
@@ -37,7 +38,7 @@
                 {% block nav_links %}
                 
                 <li class="nav-item">
-                    <a id="cargarContenido" ref="{% url 'financiera' %}" class="nav-link">
+                    <a id="cargarContenido" href="{% url 'financiera' %}" class="nav-link">
                         <i class="nav-icon fas fa-solid fa-comments-dollar"></i>
                         <p>Financiera</p>
                     </a>
@@ -52,22 +53,22 @@
                     </a>
                     <ul class="nav nav-treeview menu-open">
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'gestioncomercial' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'gestioncomercial' %}" class="nav-link">
                                 <i class="nav-icon fas fa-cart-plus"></i>Gestion Comercial
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'gestiontecnica' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'gestiontecnica' %}" class="nav-link">
                                 <i class="nav-icon fas fa-tractor"></i>Gestion Tecnica
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'cadenaabastecimiento' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'cadenaabastecimiento' %}" class="nav-link">
                                 <i class="nav-icon fas fa-truck"></i>Cadena De Abastecimiento
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'gestionalbal' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'gestionalbal' %}" class="nav-link">
                                 <i class="nav-icon fas fa-industry"></i>G- Alimento Balanceado
                             </a>
                         </li>
@@ -82,7 +83,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'calidad' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'calidad' %}" class="nav-link">
                                 <i class="nav-icon fas fa-medal"></i>Calidad
                             </a>
                         </li>
@@ -92,17 +93,17 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'adminfinan' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'adminfinan' %}" class="nav-link">
                                 <i class="nav-icon fas fa-coins"></i>G- Admin y Financiera
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'gestionhumana' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'gestionhumana' %}" class="nav-link">
                                 <i class="nav-icon fas fa-people-arrows"></i>Gestion Humana
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido"ref="{% url 'ti' %}" class="nav-link">
+                            <a id="cargarContenido"href="{% url 'ti' %}" class="nav-link">
                                 <i class="nav-icon fas fa-microchip"></i>T.I
                             </a>
                         </li>
@@ -133,17 +134,18 @@
                     </a>
                     <ul class="nav nav-treeview menu-open">
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'repoprove' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'repoprove' %}" class="nav-link">
                                 <i class="nav-icon fas fa-chart-line"></i>Proveeduria
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a id="cargarContenido" ref="{% url 'repofina' %}" class="nav-link">
+                            <a id="cargarContenido" href="{% url 'repofina' %}" class="nav-link">
                                 <i class="nav-icon fas fa-file-invoice-dollar"></i>Financiera
                             </a>
                         </li>
                     </ul>
                 </li>
+            </div>
                 {% endblock nav_links %}
                 {% endblock nav_links_outer %}
             </ul>
