--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -1,3 +1,5 @@
+{% load adminlte_helpers i18n %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="es">
 
@@ -6,79 +8,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
-    <!-- Google Font: Source Sans Pro -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
     <style>
         .valor-kilo {
             background-color: #e9e9e9;
         }
+
+        .custom-container {
+            margin-left: 130px;
+            padding-top: 20px;
+            padding-bottom: 20px;
+        }
     </style>
 </head>
 
 <body>
-    <section class="container">
-        <div class="row align-items-start">
-            <div class='col-3'>
-                <label for="datepicker-start">Desde:</label>
-                <input type="text" id="datepicker-start" placeholder="yyyy-mm-dd" class="form-control">
-            </div>
-            <div class='col-3'>
-                <label for="datepicker-end">Hasta:</label>
-                <input type="text" id="datepicker-end" placeholder="yyyy-mm-dd" class="form-control">
-            </div>
-            <div>
-                <button id="filter-btn" class="btn btn-info"
-                    style="position: relative; top: 32px; left: 15px;">Filtrar</button>
-            </div>
+    <div class="content-nowrapper">
+        <div class="content custom-container">
+            <section class="container">
+                <div class="row align-items-start mb-4">
+                    <div class='col-3'>
+                        <label for="datepicker-start">Desde:</label>
+                        <input type="text" id="datepicker-start" placeholder="yyyy-mm-dd" class="form-control">
+                    </div>
+                    <div class='col-3'>
+                        <label for="datepicker-end">Hasta:</label>
+                        <input type="text" id="datepicker-end" placeholder="yyyy-mm-dd" class="form-control">
+                    </div>
+                    <div>
+                        <button id="filter-btn" class="btn btn-info mt-3 ml-2"
+                            style="position: relative; top: 15px;">Filtrar</button>
+                    </div>
+                </div>
+            </section>
 
+            <section class="container mb-4">
+                <div class="row">
+                    <div class='col-3'>
+                        <button id="export-pdf" class="btn btn-danger">Exportar a PDF</button>
+                        <button id="export-excel" class="btn btn-success">Exportar a Excel</button>
+                    </div>
+                </div>
+            </section>
+
+            <div class="container mb-12">
+                <div class="input-group col-6">
+                    <select id="grupo-granja-selector" class="custom-select">
+                        <option value="Agrojabar">Agrojabar</option>
+                        <option value="Agrocerdos">Agrocerdos</option>
+                        <option value="campeon">campeon</option>
+                        <option value="Gamm">Gamm</option>
+                        <option value="CER">CER</option>
+                        <option value="HBM">HBM</option>
+                    </select>
+                    <button id="generate-report-btn" class="btn btn-success">Generar Reporte por grupo</button>
+                </div>
+
+                <div class="mt-3">
+                    <label for="">BUSCAR POR CONSECUTIVO, REMISION O CLIENTE: </label>
+                    <input type="text" id="search-input" placeholder="Buscar">
+                </div>
+            </div>
         </div>
-    </section>
-
-
-    <section class="container">
-        <div>
-            <div class='col-3'>
-                <button id="export-pdf" class="btn btn-danger" >Exportar a PDF</button>
-                <button id="export-excel" class="btn btn-success" >Exportar a Excel</button>
-            </div>
-        </div>
-    </section>
-    <div class="input-group col-3">
-        <select id="grupo-granja-selector" class="custom-select">
-            <option value="Agrojabar">Agrojabar</option>
-            <option value="Agrocerdos">Agrocerdos</option>
-            <option value="campeon">campeon</option>
-            <option value="Gamm">Gamm</option>
-            <option value="CER">CER</option>
-            <option value="HBM">HBM</option>
-        </select>
-        <button id="generate-report-btn" class="btn btn-outline-warning">Generar Reporte por grupo</button>
     </div>
 
     <div>
-        <label for="">BUSCAR POR CONSECUTIVO, REMISION O CLIENTE: </label><input type="text" id="search-input"
-            placeholder="Buscar ">
-
-    </div>
-    <section class="content">
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header">
-                    </div>
-
+                    <div class="card-header"></div>
                     <div class="card-body">
-                        <table id="example1" class="table table-bordered  table-responsive table-hover text-uppercase">
+                        <table id="example1" class="table table-bordered table-responsive table-hover text-uppercase">
                             <thead>
                                 <tr>
                                     <th>Fecha Transformación</th>
@@ -103,20 +106,17 @@
                                 <!-- Los datos se llenarán aquí -->
                             </tbody>
                         </table>
-                        </table>
                     </div>
-                    <!-- /.card-body -->
                 </div>
             </div>
         </div>
-    </section>
-    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
-    <!-- Agrega la biblioteca jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Agrega la biblioteca DataTables JS -->
-    <script type="text/javascript" charset="utf8"
-        src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    </div>
 
+    <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 
     <script>
         $(document).ready(function () {
@@ -150,6 +150,11 @@
 
                         // Agregar las filas con los datos
                         response.data.forEach(function (compromiso) {
+                            compromiso.Peso_canal_fria = parseFloat(compromiso.Peso_canal_fria).toFixed(2);
+                            compromiso.Valor = parseFloat(compromiso.Valor).toFixed(2);
+                            compromiso.Retencion = parseFloat(compromiso.Retencion).toFixed(2);
+                            compromiso.Valor_a_pagar_asociado = parseFloat(compromiso.Valor_a_pagar_asociado).toFixed(2);
+                            compromiso.Valor_kilo = parseFloat(compromiso.Valor_kilo).toFixed(2);
                             // Construir la fila de la tabla y establecer el ID como un atributo de datos
                             var row = '<tr data-id="' + compromiso.id + '">';
                             row += '<td>' + compromiso.Fecha_transformacion + '</td>';
@@ -181,6 +186,7 @@
 
             });
         });
+        
 
         $("#export-pdf").click(function () {
             $.ajax({
@@ -214,6 +220,35 @@
                     a.href = response.url;
                     a.download = 'reporte.xlsx';
                     a.click();
+                }
+            });
+        });
+        $("#generate-report-btn").click(function () {
+            console.log("Evento de clic activado");
+            // Obtener el valor seleccionado del selector de opciones
+            var selectedGroup = $("#grupo-granja-selector").val();
+            console.log('Start Date:', $("#datepicker-start").val());
+            console.log('End Date:', $("#datepicker-end").val());
+            console.log('Selected Group:', $("#grupo-granja-selector").val());
+
+
+            // Hacer la solicitud AJAX para generar el informe en Excel
+            $.ajax({
+                url: '/generate_excel_report/',
+                type: 'GET',
+                data: {
+                    start_date: $("#datepicker-start").val(),
+                    end_date: $("#datepicker-end").val(),
+                    selected_group: selectedGroup
+                },
+                success: function (response) {
+                    // Descargar el archivo Excel
+                    var a = document.createElement('a');
+                    a.href = response.url;
+                    a.download = 'reporte_grupo_' + selectedGroup + '.xlsx';
+                    a.click();
+
+
                 }
             });
         });
@@ -257,69 +292,35 @@
             });
         });
 
+        $(document).ready(function () {
+            $("#search-input").on("input", function () {
+                // Obtener el texto de búsqueda
+                var searchText = $(this).val().toLowerCase();
 
-        $("#search-input").on("input", function () {
-            // Obtener el texto de búsqueda
-            var searchText = $(this).val().toLowerCase();
+                // Filtrar las filas de la tabla
+                $("#example1 tbody tr").each(function () {
+                    // Obtener los valores de las columnas relevantes
+                    var consecutivoCercafe = $(this).find("td:nth-child(4)").text().toLowerCase();
+                    var remision = $(this).find("td:nth-child(6)").text().toLowerCase();
+                    var cliente = $(this).find("td:nth-child(8)").text().toLowerCase();
 
-            // Filtrar las filas de la tabla
-            $("#example1 tbody tr").each(function () {
-                // Obtener los valores de las columnas relevantes
-                var consecutivoCercafe = $(this).find("td:nth-child(4)").text().toLowerCase();
-                var remision = $(this).find("td:nth-child(6)").text().toLowerCase();
-                var cliente = $(this).find("td:nth-child(8)").text().toLowerCase();
-
-                // Ocultar o mostrar la fila según el texto de búsqueda
-                if (consecutivoCercafe.indexOf(searchText) > -1 || remision.indexOf(searchText) > -1 || cliente.indexOf(searchText) > -1) {
-                    $(this).show();
-                } else {
-                    $(this).hide();
-                }
+                    // Ocultar o mostrar la fila según el texto de búsqueda
+                    if (consecutivoCercafe.indexOf(searchText) > -1 || remision.indexOf(searchText) > -1 || cliente.indexOf(searchText) > -1) {
+                        $(this).show();
+                    } else {
+                        $(this).hide();
+                    }
+                });
             });
+           
+
+            // Evento click para el botón de generar informe en Excel
+
         });
-        $("#example1").DataTable({
-            "responsive": true,
-            "autoWidth": false,
-        });
-
-        // Evento click para el botón de generar informe en Excel
-        $("#generate-report-btn").click(function () {
-            // Obtener el valor seleccionado del selector de opciones
-            var selectedGroup = $("#grupo-granja-selector").val();
-
-            // Hacer la solicitud AJAX para generar el informe en Excel
-            $.ajax({
-                url: '/generate-excel-report/',
-                type: 'GET',
-                data: {
-                    start_date: $("#datepicker-start").val(),
-                    end_date: $("#datepicker-end").val(),
-                    selected_group: selectedGroup
-                },
-                success: function (response) {
-                    // Descargar el archivo Excel
-                    var a = document.createElement('a');
-                    a.href = response.url;
-                    a.download = 'reporte_grupo_' + selectedGroup + '.xlsx';
-                    a.click();
-
-
-                }
-            });
-        });
-
-
 
     </script>
 
-    <!-- jQuery -->
-    <script src="../../plugins/jquery/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="../../dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="../../dist/js/demo.js"></script>
+
 </body>
 
 </html>
