--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -16,6 +16,10 @@
         .valor-kilo {
             background-color: #e9e9e9;
         }
+        .btn-danger1{
+            background-color: #c45454;
+            color: #ffffff;
+        }
 
         .custom-container {
             margin-left: 130px;
@@ -47,9 +51,9 @@
 
             <section class="container mb-4">
                 <div class="row">
-                    <div class='col-3'>
-                        <button id="export-pdf" class="btn btn-danger">Exportar a PDF</button>
-                        <button id="export-excel" class="btn btn-success">Exportar a Excel</button>
+                    <div class='col-5'>
+                        <button id="export-pdf" class="btn btn-danger1">Exportar a PDF<img src="/static/images/icons8-pdf-60.png"height ="35" width="35"/></button>
+                        <button id="export-excel" class="btn btn-success">Exportar a Excel<img src="/static/images/icons8-excel-48.png"height ="35" width="35"/></button>
                     </div>
                 </div>
             </section>
