--- a/login/templates/financiera.html
+++ b/login/templates/financiera.html
@@ -16,7 +16,8 @@
         .valor-kilo {
             background-color: #e9e9e9;
         }
-        .btn-danger1{
+
+        .btn-danger1 {
             background-color: #c45454;
             color: #ffffff;
         }
@@ -52,8 +53,10 @@
             <section class="container mb-4">
                 <div class="row">
                     <div class='col-5'>
-                        <button id="export-pdf" class="btn btn-danger1">Exportar a PDF<img src="/static/images/icons8-pdf-60.png"height ="35" width="35"/></button>
-                        <button id="export-excel" class="btn btn-success">Exportar a Excel<img src="/static/images/icons8-excel-48.png"height ="35" width="35"/></button>
+                        <button id="export-pdf" class="btn btn-danger1">Exportar a PDF<img
+                                src="/static/images/icons8-pdf-60.png" height="35" width="35" /></button>
+                        <button id="export-excel" class="btn btn-success">Exportar a Excel<img
+                                src="/static/images/icons8-excel-48.png" height="35" width="35" /></button>
                     </div>
                 </div>
             </section>
@@ -184,13 +187,42 @@
                             $('#example1 tbody').append(row);
                         });
 
+                        var currentDate = new Date();
+                        var currentMonth = currentDate.getMonth(); // Mes actual (0-11)
+                        var currentYear = currentDate.getFullYear(); // Año actual
+                        var startDate = new Date($("#datepicker-start").val());
+                        var endDate = new Date($("#datepicker-end").val());
+
+
+                        // Determinar las fechas de corte del mes actual
+                        var firstCutOffDate = new Date(currentYear, currentMonth, 16); // Fecha de corte del día 16
+                        var lastDayOfMonth = new Date(currentYear, currentMonth + 1, 0); // Último día del mes
+
+
+                        $('#example1 tbody tr').each(function () {
+                            var rowDate = new Date($(this).find("td:nth-child(1)").text()); // Obtener la fecha de la fila
+
+                            // Comprobar si el mes seleccionado es el mes actual y si la fecha actual está dentro del rango
+                            if (rowDate.getMonth() === currentMonth && rowDate.getFullYear() === currentYear &&
+                                rowDate >= startDate && rowDate <= endDate) {
+                                // Permitir la edición del campo editable
+                                $(this).find(".editable").prop("contenteditable", true);
+                            } else {
+                                // Deshabilitar la edición del campo editable
+                                $(this).find(".editable").prop("contenteditable", false);
+                            }
+                        });
+
+
+
                     }
 
                 });
 
             });
         });
-        
+
+
 
         $("#export-pdf").click(function () {
             $.ajax({
@@ -265,36 +297,46 @@
 
             // Evento click para el botón de guardar
             $("body").on("click", ".save-btn", function () {
-                // Obtener el valor modificado
-                var newValue = $(this).closest("tr").find(".editable").text();
-                // Obtener el ID de la fila
-                var id = $(this).closest("tr").data("id");
-                console.log("ID:", id);
+                // Obtener el campo editable asociado
+                var editableField = $(this).closest("tr").find(".editable");
 
-                var csrfToken = $("[name=csrfmiddlewaretoken]").val();
-                // Hacer la solicitud AJAX para guardar los cambios
-                $.ajax({
-                    url: '/save-changes/',
-                    type: 'POST',
-                    data: {
-                        id: id,
-                        newValue: newValue,
-                        csrfmiddlewaretoken: csrfToken
-                    },
-                    success: function (response) {
-                        // Si la operación fue exitosa, actualizar la tabla
-                        if (response.success) {
-                            alert('Cambios guardados exitosamente.');
-                        } else {
+                // Verificar si el campo editable está habilitado
+                if (editableField.prop("contenteditable") === "true") {
+                    // Obtener el valor modificado
+                    var newValue = editableField.text();
+                    // Obtener el ID de la fila
+                    var id = $(this).closest("tr").data("id");
+                    console.log("ID:", id);
+
+                    var csrfToken = $("[name=csrfmiddlewaretoken]").val();
+                    // Hacer la solicitud AJAX para guardar los cambios
+                    $.ajax({
+                        url: '/save-changes/',
+                        type: 'POST',
+                        data: {
+                            id: id,
+                            newValue: newValue,
+                            csrfmiddlewaretoken: csrfToken
+                        },
+                        success: function (response) {
+                            // Si la operación fue exitosa, actualizar la tabla
+                            if (response.success) {
+                                alert('Cambios guardados exitosamente.');
+                            } else {
+                                alert('Error al guardar los cambios.');
+                            }
+                        },
+                        error: function () {
                             alert('Error al guardar los cambios.');
                         }
-                    },
-                    error: function () {
-                        alert('Error al guardar los cambios.');
-                    }
-                });
+                    });
+                } else {
+                    // El campo editable está deshabilitado, no se puede guardar
+                    alert('No se puede guardar cambios en un campo deshabilitado.');
+                }
             });
         });
+
 
         $(document).ready(function () {
             $("#search-input").on("input", function () {
@@ -316,11 +358,13 @@
                     }
                 });
             });
-           
+
 
             // Evento click para el botón de generar informe en Excel
 
         });
+
+
 
     </script>
 
